operations/api/templates/rollout-watcher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-abort-controller
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rollout-abort-controller
  template:
    metadata:
      labels:
        app: rollout-abort-controller
    spec:
      serviceAccountName: rollout-controller
      containers:
        - name: controller
          image: barywhyte/rollout-abort-controller:latest
          command: ["/bin/sh", "-c", "while true; do /watch-rollout.sh; sleep 30; done"]
