operations/api/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
  annotations:

    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"


spec:
  tls:
    - hosts:
        - seun.tech
      secretName: barywhyt-tls
  rules:
    - host: seun.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
